<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- switch modes, should appear as action button if possible -->
    <item
        android:id="@+id/action_vibemode"
        android:icon="@drawable/ic_surround_sound_white_24dp"
        android:title="Vibe Mode"
        app:showAsAction="ifRoom"/>

    <!-- filter, sort the list by ... -->
    <item
        android:id="@+id/action_sort"
        android:title="Sort by ..."
...
